# SCAI2024_Estimating_Synthetic_Data

./: .gitignore  Makefile  README.md  experiment_config.yml  minimal_requirements.txt  pip_win_requirements.txt  pyproject.toml  requirements.yaml
data/: rename_script.py
data/metadata/: D0  D00  D1  D2  D205  D3  D305  D405
data/result/: BNLogLikelihood.csv  CSTest.csv  Cluster_1.csv  ContinousKLD.csv  CrCl.csv  DiscreteKLD.csv  GMLogLikelihood.csv  KSComplement.csv  model_performance.csv  pMSE.csv
data/result/SDG/: SD0Q1000_loss.csv  SD0Q100_loss.csv  SD0Q10_loss.csv  SD0Q1500_loss.csv  SD0Q500_loss.csv  SD1Q1000_loss.csv  SD1Q100_loss.csv  SD1Q10_loss.csv  SD1Q1500_loss.csv  SD1Q500_loss.csv  SD205Q1000_loss.csv  SD205Q100_loss.csv  SD205Q10_loss.csv  (+9 more)
notebooks/: D205-colab-models.ipynb  MNIST_Q100_colab_PF.ipynb  Run-all-steps.ipynb  Step1_D0-diabetes.ipynb  Step1_D00_Weather_Classification.ipynb  Step1_D1-titanic.ipynb  Step1_D205-bank.ipynb  Step1_D305-mnist.ipynb  Step1_D405-Adult.ipynb  Step2-Model-pycaret.ipynb  Step2-Model-sklearn.ipynb  Step3-SDG-TVAE.ipynb  Step3-SDG.ipynb  Step4-SD-Models-pycaret.ipynb  Step5-Measures_PF-Copy1.ipynb  Step5-Measures_PF.ipynb  colab_Run-pf_measures.ipynb  general_hyptest.tex  specific_hyptest.tex
pickles/settings/: D0-settings.pkl  D00-settings.pkl  D1-settings.pkl  D205-settings.pkl  D3-settings.pkl  D305-settings.pkl  D405-settings.pkl  D410-settings.pkl
src/: PF_metrics.py  __init__.py  gpuclassification.py  mlflow_manager.py  preprocessing.py  tuning_grids.py  utils.py
test/: test_PF_metrics.py  test_utils.py
(+26 files in other folders)
