[tool.poetry]
name = "scai2024-estimating-synthetic-data"
version = "0.1.0"
description = ""
authors = ["Alexander Florean <alexander.florean@cgi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
kaleido = "0.2.1"
pycaret = {version = "3.0.0", extras = ["tuners"]}
sdv = "1.0.0"
sdmetrics = "0.9.3"
mlflow = "2.3.0"
kmodes = "0.12.2"
ipykernel = "^6.29.2"
seaborn = "0.12.2"
scikit-learn = "1.1.3"
scipy = "1.9.3"
numpy = "1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
